--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="header">
             <img class="bg-icon" alt="" src="./public/bg.svg" />
 
-            <b class="pottery">Pottery</b>
+            <b class="pottery">Potty</b>
             <div class="rectangle-parent">
               <div class="frame-child"></div>
               <div class="free-shipping-online-payment-o-wrapper">
