add this change

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <div class="sculptures-wrapper">
                       <div class="sculptures">SCULPTURES</div>
                     </div>
-                    <div class="pottery1">POTTERY</div>
+                    <div class="pottery1">POTTY</div>
                   </div>
                 </div>
                 <div class="handcrafted-jewellery-wrapper">
@@ -1003,7 +1003,7 @@
             <a class="paintings1">PAINTINGS</a>
             <a class="artworks">ARTWORKS</a>
             <a class="sculptures1">SCULPTURES</a>
-            <a class="pottery2">POTTERY</a>
+            <a class="pottery2">POTTY</a>
             <a class="contact-us">CONTACT US</a>
             <a class="faq">FAQ</a>
           </div>
