--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="header">
             <img class="bg-icon" alt="" src="./public/bg.svg" />
 
-            <b class="pottery">Potty</b>
+            <b class="pottery">Pottery</b>
             <div class="rectangle-parent">
               <div class="frame-child"></div>
               <div class="free-shipping-online-payment-o-wrapper">
@@ -177,7 +177,7 @@
                     <div class="sculptures-wrapper">
                       <div class="sculptures">SCULPTURES</div>
                     </div>
-                    <div class="pottery1">POTTY</div>
+                    <div class="pottery1">POTTERY</div>
                   </div>
                 </div>
                 <div class="handcrafted-jewellery-wrapper">
@@ -1003,7 +1003,7 @@
             <a class="paintings1">PAINTINGS</a>
             <a class="artworks">ARTWORKS</a>
             <a class="sculptures1">SCULPTURES</a>
-            <a class="pottery2">POTTY</a>
+            <a class="pottery2">POTTERY</a>
             <a class="contact-us">CONTACT US</a>
             <a class="faq">FAQ</a>
           </div>
