--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                         <b class="b4">Rs 2999</b>
                       </div>
                     </div>
-                    <button class="frame-button">
+                    <!-- <button class="frame-button">
                       <div class="shopping-cart-frame">
                         <img
                           class="shopping-cart-icon2"
@@ -514,7 +514,7 @@
                         />
                       </div>
                       <b class="add-to-cart2">ADD TO CART</b>
-                    </button>
+                    </button> -->
                   </div>
                 </div>
               </div>
@@ -546,7 +546,7 @@
                                 <b class="b5">Rs. 1200</b>
                               </div>
                             </div>
-                            <button class="frame-parent23">
+                            <!-- <button class="frame-parent23">
                               <div class="shopping-cart-wrapper1">
                                 <img
                                   class="shopping-cart-icon3"
@@ -555,7 +555,7 @@
                                 />
                               </div>
                               <b class="add-to-cart3">ADD TO CART</b>
-                            </button>
+                            </button> -->
                           </div>
                         </div>
                       </div>
@@ -584,7 +584,7 @@
                         <div class="rs-999-wrapper">
                           <b class="rs-999">Rs 999</b>
                         </div>
-                        <button class="frame-parent26">
+                        <!-- <button class="frame-parent26">
                           <div class="shopping-cart-wrapper2">
                             <img
                               class="shopping-cart-icon4"
@@ -593,7 +593,7 @@
                             />
                           </div>
                           <b class="add-to-cart4">ADD TO CART</b>
-                        </button>
+                        </button> -->
                       </div>
                     </div>
                   </div>
@@ -619,7 +619,7 @@
                       <div class="rs1799-wrapper">
                         <b class="rs1799">Rs1799</b>
                       </div>
-                      <button class="frame-parent29">
+                      <!-- <button class="frame-parent29">
                         <div class="shopping-cart-wrapper3">
                           <img
                             class="shopping-cart-icon5"
@@ -628,7 +628,7 @@
                           />
                         </div>
                         <b class="add-to-cart5">ADD TO CART</b>
-                      </button>
+                      </button> -->
                     </div>
                   </div>
                 </div>
@@ -657,7 +657,7 @@
                         </div>
                       </div>
                     </div>
-                    <button class="frame-parent32">
+                    <!-- <button class="frame-parent32">
                       <div class="shopping-cart-wrapper4">
                         <img
                           class="shopping-cart-icon6"
@@ -666,7 +666,7 @@
                         />
                       </div>
                       <b class="add-to-cart6">ADD TO CART</b>
-                    </button>
+                    </button> -->
                   </div>
                 </div>
               </div>
@@ -691,7 +691,7 @@
                         <b class="b6">$140</b>
                       </div>
                     </div>
-                    <button class="frame-parent35">
+                    <!-- <button class="frame-parent35">
                       <div class="shopping-cart-wrapper5">
                         <img
                           class="shopping-cart-icon7"
@@ -700,7 +700,7 @@
                         />
                       </div>
                       <b class="add-to-cart7">ADD TO CART</b>
-                    </button>
+                    </button> -->
                   </div>
                 </div>
               </div>
@@ -726,7 +726,7 @@
                             <b class="b7">$140</b>
                           </div>
                         </div>
-                        <button class="frame-parent32">
+                        <!-- <button class="frame-parent32">
                           <div class="shopping-cart-wrapper6">
                             <img
                               class="shopping-cart-icon8"
@@ -735,7 +735,7 @@
                             />
                           </div>
                           <b class="add-to-cart8">ADD TO CART</b>
-                        </button>
+                        </button> -->
                       </div>
                     </div>
                   </div>
@@ -762,7 +762,7 @@
                       <div class="rs-2999-wrapper">
                         <b class="rs-2999">Rs 2999</b>
                       </div>
-                      <button class="frame-parent39">
+                      <!-- <button class="frame-parent39">
                         <div class="shopping-cart-wrapper7">
                           <img
                             class="shopping-cart-icon9"
@@ -771,7 +771,7 @@
                           />
                         </div>
                         <b class="add-to-cart9">ADD TO CART</b>
-                      </button>
+                      </button> -->
                     </div>
                   </div>
                 </div>
