--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
               <div class="frame-wrapper11">
                 <div class="pastel-long-sleeve-container">
                   <h3 class="pastel-long-sleeve3">Handcrafted Handlooms</h3>
-                  <img class="rating-icon" alt="" src="./public/rating.svg" />
+                  <!-- <img class="rating-icon" alt="" src="./public/rating.svg" /> -->
 
                   <div class="frame-parent20">
                     <div class="frame-wrapper12">
@@ -532,11 +532,11 @@
                     <div class="pastel-long-sleeve-parent1">
                       <h3 class="pastel-long-sleeve4">Handcrafted Handlooms</h3>
                       <div class="rating-parent">
-                        <img
+                        <!-- <img
                           class="rating-icon1"
                           alt=""
                           src="./public/rating-1.svg"
-                        />
+                        /> -->
 
                         <div class="frame-wrapper15">
                           <div class="frame-parent22">
@@ -570,11 +570,11 @@
                   <div class="frame-parent24">
                     <div class="empower-plate-parent">
                       <h3 class="empower-plate">Empower Plate</h3>
-                      <img
+                      <!-- <img
                         class="rating-icon2"
                         alt=""
                         src="./public/rating-2.svg"
-                      />
+                      /> -->
                     </div>
                     <div class="frame-wrapper18">
                       <div class="frame-parent25">
@@ -606,11 +606,11 @@
                   <div class="frame-parent27">
                     <div class="musician-kitty-parent">
                       <h3 class="musician-kitty">Musician Kitty</h3>
-                      <img
+                      <!-- <img
                         class="rating-icon3"
                         alt=""
                         src="./public/rating-3.svg"
-                      />
+                      /> -->
                     </div>
                     <div class="frame-parent28">
                       <div class="rs-1999-wrapper">
@@ -645,11 +645,11 @@
                   <div class="frame-parent31">
                     <div class="frame-wrapper21">
                       <div class="rating-group">
-                        <img
+                        <!-- <img
                           class="rating-icon4"
                           alt=""
                           src="./public/rating-4.svg"
-                        />
+                        /> -->
 
                         <div class="parent1">
                           <div class="div3">$220</div>
@@ -678,11 +678,11 @@
                 <div class="frame-parent33">
                   <div class="hoodiee-long-sleeve-parent">
                     <h3 class="hoodiee-long-sleeve">Hoodiee Long Sleeve</h3>
-                    <img
+                    <!-- <img
                       class="rating-icon5"
                       alt=""
                       src="./public/rating-5.svg"
-                    />
+                    /> -->
                   </div>
                   <div class="frame-parent34">
                     <div class="frame-wrapper23">
@@ -712,11 +712,11 @@
                 <div class="soft-toys-teddy-bears-parent">
                   <h3 class="soft-toys-teddy">Soft Toys (Teddy Bears)</h3>
                   <div class="rating-container">
-                    <img
+                    <!-- <img
                       class="rating-icon6"
                       alt=""
                       src="./public/rating-6.svg"
-                    />
+                    /> -->
 
                     <div class="frame-wrapper25">
                       <div class="frame-parent36">
@@ -749,11 +749,11 @@
                 <div class="unique-dream-catcher-parent">
                   <h3 class="unique-dream-catcher">Unique Dream Catcher</h3>
                   <div class="rating-parent1">
-                    <img
+                    <!-- <img
                       class="rating-icon7"
                       alt=""
                       src="./public/rating-7.svg"
-                    />
+                    /> -->
 
                     <div class="frame-parent38">
                       <div class="rs-3999-wrapper">
