--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                   <div class="frame-parent20">
                     <div class="frame-wrapper12">
                       <div class="group">
-                        <div class="div1">Rs 3499</div>
+                        <!-- <div class="div1">Rs 3499</div> -->
                         <b class="b4">Rs 2999</b>
                       </div>
                     </div>
@@ -542,7 +542,7 @@
                           <div class="frame-parent22">
                             <div class="frame-wrapper16">
                               <div class="container">
-                                <div class="div2">$220</div>
+                                <!-- <div class="div2">$220</div> -->
                                 <b class="b5">Rs. 1200</b>
                               </div>
                             </div>
@@ -578,9 +578,9 @@
                     </div>
                     <div class="frame-wrapper18">
                       <div class="frame-parent25">
-                        <div class="rs-1499-wrapper">
-                          <div class="rs-1499">RS 1499</div>
-                        </div>
+                        <!-- <div class="rs-1499-wrapper"> -->
+                          <!-- <div class="rs-1499">RS 1499</div> -->
+                        <!-- </div> -->
                         <div class="rs-999-wrapper">
                           <b class="rs-999">Rs 999</b>
                         </div>
@@ -613,9 +613,9 @@
                       /> -->
                     </div>
                     <div class="frame-parent28">
-                      <div class="rs-1999-wrapper">
+                      <!-- <div class="rs-1999-wrapper">
                         <div class="rs-1999">Rs 1999</div>
-                      </div>
+                      </div> -->
                       <div class="rs1799-wrapper">
                         <b class="rs1799">Rs1799</b>
                       </div>
@@ -652,7 +652,7 @@
                         /> -->
 
                         <div class="parent1">
-                          <div class="div3">$220</div>
+                          <!-- <div class="div3">$220</div> -->
                           <b class="rs-750">RS 750</b>
                         </div>
                       </div>
@@ -687,7 +687,7 @@
                   <div class="frame-parent34">
                     <div class="frame-wrapper23">
                       <div class="parent2">
-                        <div class="div4">$220</div>
+                        <!-- <div class="div4">$220</div> -->
                         <b class="b6">$140</b>
                       </div>
                     </div>
@@ -722,7 +722,7 @@
                       <div class="frame-parent36">
                         <div class="frame-wrapper26">
                           <div class="parent3">
-                            <div class="div5">$220</div>
+                            <!-- <div class="div5">$220</div> -->
                             <b class="b7">$140</b>
                           </div>
                         </div>
@@ -756,9 +756,9 @@
                     /> -->
 
                     <div class="frame-parent38">
-                      <div class="rs-3999-wrapper">
+                      <!-- <div class="rs-3999-wrapper">
                         <div class="rs-3999">Rs 3999</div>
-                      </div>
+                      </div> -->
                       <div class="rs-2999-wrapper">
                         <b class="rs-2999">Rs 2999</b>
                       </div>
