--- a/index.html
+++ b/index.html
@@ -498,13 +498,13 @@
                   <h3 class="pastel-long-sleeve3">Handcrafted Handlooms</h3>
                   <!-- <img class="rating-icon" alt="" src="./public/rating.svg" /> -->
 
-                  <div class="frame-parent20">
+                  <!-- <div class="frame-parent20">
                     <div class="frame-wrapper12">
                       <div class="group">
                         <!-- <div class="div1">Rs 3499</div> -->
-                        <b class="b4">Rs 2999</b>
+                        <!-- <b class="b4">Paintings just for you!</b>
                       </div>
-                    </div>
+                    </div> -->
                     <!-- <button class="frame-button">
                       <div class="shopping-cart-frame">
                         <img
@@ -538,14 +538,14 @@
                           src="./public/rating-1.svg"
                         /> -->
 
-                        <div class="frame-wrapper15">
+                        <!-- <div class="frame-wrapper15">
                           <div class="frame-parent22">
                             <div class="frame-wrapper16">
                               <div class="container">
-                                <!-- <div class="div2">$220</div> -->
+                                 <div class="div2">$220</div> 
                                 <b class="b5">Rs. 1200</b>
                               </div>
-                            </div>
+                            </div> -->
                             <!-- <button class="frame-parent23">
                               <div class="shopping-cart-wrapper1">
                                 <img
