--- a/index.html
+++ b/index.html
@@ -498,13 +498,13 @@
                   <h3 class="pastel-long-sleeve3">Handcrafted Handlooms</h3>
                   <!-- <img class="rating-icon" alt="" src="./public/rating.svg" /> -->
 
-                  <!-- <div class="frame-parent20">
+                  <div class="frame-parent20">
                     <div class="frame-wrapper12">
                       <div class="group">
                         <!-- <div class="div1">Rs 3499</div> -->
-                        <!-- <b class="b4">Paintings just for you!</b>
+                        <!-- <b class="b4">Paintings just for you!</b> -->
                       </div>
-                    </div> -->
+                    </div>
                     <!-- <button class="frame-button">
                       <div class="shopping-cart-frame">
                         <img
@@ -538,14 +538,14 @@
                           src="./public/rating-1.svg"
                         /> -->
 
-                        <!-- <div class="frame-wrapper15">
+                        <div class="frame-wrapper15">
                           <div class="frame-parent22">
                             <div class="frame-wrapper16">
                               <div class="container">
-                                 <div class="div2">$220</div> 
-                                <b class="b5">Rs. 1200</b>
+                                <!-- <div class="div2">$220</div> -->
+                                <!-- <b class="b5">Rs. 1200</b> -->
                               </div>
-                            </div> -->
+                            </div>
                             <!-- <button class="frame-parent23">
                               <div class="shopping-cart-wrapper1">
                                 <img
@@ -581,9 +581,9 @@
                         <!-- <div class="rs-1499-wrapper"> -->
                           <!-- <div class="rs-1499">RS 1499</div> -->
                         <!-- </div> -->
-                        <div class="rs-999-wrapper">
+                        <!-- <div class="rs-999-wrapper">
                           <b class="rs-999">Rs 999</b>
-                        </div>
+                        </div> -->
                         <!-- <button class="frame-parent26">
                           <div class="shopping-cart-wrapper2">
                             <img
@@ -616,9 +616,9 @@
                       <!-- <div class="rs-1999-wrapper">
                         <div class="rs-1999">Rs 1999</div>
                       </div> -->
-                      <div class="rs1799-wrapper">
+                      <!-- <div class="rs1799-wrapper">
                         <b class="rs1799">Rs1799</b>
-                      </div>
+                      </div> -->
                       <!-- <button class="frame-parent29">
                         <div class="shopping-cart-wrapper3">
                           <img
@@ -651,10 +651,10 @@
                           src="./public/rating-4.svg"
                         /> -->
 
-                        <div class="parent1">
-                          <!-- <div class="div3">$220</div> -->
+                        <!-- <div class="parent1">
+                          <div class="div3">$220</div>
                           <b class="rs-750">RS 750</b>
-                        </div>
+                        </div> -->
                       </div>
                     </div>
                     <!-- <button class="frame-parent32">
