ab kar add bhen ke lode

--- a/index.html
+++ b/index.html
@@ -686,10 +686,10 @@
                   </div>
                   <div class="frame-parent34">
                     <div class="frame-wrapper23">
-                      <div class="parent2">
-                        <!-- <div class="div4">$220</div> -->
+                      <!-- <div class="parent2">
+                        <div class="div4">$220</div>
                         <b class="b6">$140</b>
-                      </div>
+                      </div> -->
                     </div>
                     <!-- <button class="frame-parent35">
                       <div class="shopping-cart-wrapper5">
@@ -721,10 +721,10 @@
                     <div class="frame-wrapper25">
                       <div class="frame-parent36">
                         <div class="frame-wrapper26">
-                          <div class="parent3">
-                            <!-- <div class="div5">$220</div> -->
+                          <!-- <div class="parent3">
+                            <div class="div5">$220</div>
                             <b class="b7">$140</b>
-                          </div>
+                          </div> -->
                         </div>
                         <!-- <button class="frame-parent32">
                           <div class="shopping-cart-wrapper6">
@@ -759,9 +759,9 @@
                       <!-- <div class="rs-3999-wrapper">
                         <div class="rs-3999">Rs 3999</div>
                       </div> -->
-                      <div class="rs-2999-wrapper">
+                      <!-- <div class="rs-2999-wrapper">
                         <b class="rs-2999">Rs 2999</b>
-                      </div>
+                      </div> -->
                       <!-- <button class="frame-parent39">
                         <div class="shopping-cart-wrapper7">
                           <img
