--- a/index.html
+++ b/index.html
@@ -490,6 +490,7 @@
             </div>
           </div>
           <div class="frame-parent19">
+            <a href="">
             <div class="image-parent">
               <img class="image-icon6" alt="" src="./public/image-6@2x.png" />
 
@@ -519,6 +520,7 @@
                 </div>
               </div>
             </div>
+          </a>
             <div class="frame-parent21">
               <div class="frame-wrapper13">
                 <div class="image-group">
