--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
             </div>
           </div>
           <div class="frame-parent19">
-            <a href="">
+            <a href="add_to_cart_v3-main/index.html">
             <div class="image-parent">
               <img class="image-icon6" alt="" src="./public/image-6@2x.png" />
 
