--- a/index.html
+++ b/index.html
@@ -523,6 +523,7 @@
             </div>
           </a>
             <div class="frame-parent21">
+              <a href="add_to_cart_v3-main/index.html">
               <div class="frame-wrapper13">
                 <div class="image-group">
                   <img
@@ -566,6 +567,7 @@
                   </div>
                 </div>
               </div>
+            </a>
               <div class="image-container">
                 <img class="image-icon8" alt="" src="./public/image-8@2x.png" />
 
