--- a/index.html
+++ b/index.html
@@ -523,6 +523,7 @@
             </div>
           </a>
             <div class="frame-parent21">
+            <!----------------------- CARD 2 -------------------------> 
               <a href="add_to_cart_v3-main/index.html">
               <div class="frame-wrapper13">
                 <div class="image-group">
@@ -568,6 +569,8 @@
                 </div>
               </div>
             </a>
+            <!----------------------- CARD 3 ------------------------->
+            <a href="add_to_cart_v3-main/index.html">
               <div class="image-container">
                 <img class="image-icon8" alt="" src="./public/image-8@2x.png" />
 
@@ -604,6 +607,7 @@
                   </div>
                 </div>
               </div>
+            </a>
               <div class="image-parent1">
                 <img class="image-icon9" alt="" src="./public/image-9@2x.png" />
 
