--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                 </div>
               </div>
             </a>
-            <!----------------------- CARD 3 ------------------------->
+            <!----------------------- CARD 3 ------------------------->         
             <a href="add_to_cart_v3-main/index.html">
               <div class="image-container">
                 <img class="image-icon8" alt="" src="./public/image-8@2x.png" />
@@ -608,6 +608,8 @@
                 </div>
               </div>
             </a>
+            <!----------------------- CARD 4 ------------------------->
+            <a href="add_to_cart_v3-main/index.html">
               <div class="image-parent1">
                 <img class="image-icon9" alt="" src="./public/image-9@2x.png" />
 
@@ -642,9 +644,12 @@
                   </div>
                 </div>
               </div>
+            </a>
             </div>
           </div>
           <div class="frame-parent30">
+            <!----------------------- CARD 5 ------------------------->
+            <a href="add_to_cart_v3-main/index.html">
             <div class="image-parent2">
               <img class="image-icon10" alt="" src="./public/image-10@2x.png" />
 
@@ -680,6 +685,7 @@
                 </div>
               </div>
             </div>
+          </a>
             <div class="image-parent3">
               <img class="image-icon11" alt="" src="./public/image-11@2x.png" />
 
