add krle bsdk card touch

--- a/index.html
+++ b/index.html
@@ -686,6 +686,8 @@
               </div>
             </div>
           </a>
+            <!----------------------- CARD 6 ------------------------->
+          <a href="add_to_cart_v3-main/index.html">
             <div class="image-parent3">
               <img class="image-icon11" alt="" src="./public/image-11@2x.png" />
 
@@ -720,6 +722,9 @@
                 </div>
               </div>
             </div>
+          </a>
+          <!----------------------- CARD 7 ------------------------->
+          <a href="add_to_cart_v3-main/index.html">
             <div class="image-parent4">
               <img class="image-icon12" alt="" src="./public/image-12@2x.png" />
 
@@ -757,6 +762,9 @@
                 </div>
               </div>
             </div>
+          </a>
+          <!----------------------- CARD 8 ------------------------->
+          <a href="add_to_cart_v3-main/index.html">
             <div class="image-parent5">
               <img class="image-icon13" alt="" src="./public/image-13@2x.png" />
 
@@ -792,6 +800,7 @@
                 </div>
               </div>
             </div>
+          </a>
           </div>
         </div>
       </section>
