--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
           </div>
           <div class="frame-parent19">
             <!----------------------- CARD 1 ------------------------->
-            <a href="add_to_cart_v3-main/index.html">
+            <a class="card-click-redirect-to-cart" href="add_to_cart_v3-main/index.html">
             <div class="image-parent">
               <img class="image-icon6" alt="" src="./public/image-6@2x.png" />
 
@@ -524,7 +524,7 @@
           </a>
             <div class="frame-parent21">
             <!----------------------- CARD 2 -------------------------> 
-              <a href="add_to_cart_v3-main/index.html">
+              <a class="card-click-redirect-to-cart" href="add_to_cart_v3-main/index.html">
               <div class="frame-wrapper13">
                 <div class="image-group">
                   <img
@@ -570,7 +570,7 @@
               </div>
             </a>
             <!----------------------- CARD 3 ------------------------->         
-            <a href="add_to_cart_v3-main/index.html">
+            <a class="card-click-redirect-to-cart" href="add_to_cart_v3-main/index.html">
               <div class="image-container">
                 <img class="image-icon8" alt="" src="./public/image-8@2x.png" />
 
@@ -609,7 +609,7 @@
               </div>
             </a>
             <!----------------------- CARD 4 ------------------------->
-            <a href="add_to_cart_v3-main/index.html">
+            <a class="card-click-redirect-to-cart" href="add_to_cart_v3-main/index.html">
               <div class="image-parent1">
                 <img class="image-icon9" alt="" src="./public/image-9@2x.png" />
 
@@ -649,7 +649,7 @@
           </div>
           <div class="frame-parent30">
             <!----------------------- CARD 5 ------------------------->
-            <a href="add_to_cart_v3-main/index.html">
+            <a class="card-click-redirect-to-cart" href="add_to_cart_v3-main/index.html">
             <div class="image-parent2">
               <img class="image-icon10" alt="" src="./public/image-10@2x.png" />
 
@@ -687,7 +687,7 @@
             </div>
           </a>
             <!----------------------- CARD 6 ------------------------->
-          <a href="add_to_cart_v3-main/index.html">
+          <a class="card-click-redirect-to-cart" href="add_to_cart_v3-main/index.html">
             <div class="image-parent3">
               <img class="image-icon11" alt="" src="./public/image-11@2x.png" />
 
@@ -724,7 +724,7 @@
             </div>
           </a>
           <!----------------------- CARD 7 ------------------------->
-          <a href="add_to_cart_v3-main/index.html">
+          <a class="card-click-redirect-to-cart" href="add_to_cart_v3-main/index.html">
             <div class="image-parent4">
               <img class="image-icon12" alt="" src="./public/image-12@2x.png" />
 
@@ -764,7 +764,7 @@
             </div>
           </a>
           <!----------------------- CARD 8 ------------------------->
-          <a href="add_to_cart_v3-main/index.html">
+          <a class="card-click-redirect-to-cart" href="add_to_cart_v3-main/index.html">
             <div class="image-parent5">
               <img class="image-icon13" alt="" src="./public/image-13@2x.png" />
 
