--- a/add_to_cart_v3-main/index.html
+++ b/add_to_cart_v3-main/index.html
@@ -24,7 +24,7 @@
   <body class="">
     <div class="container">
       <header>
-        <div class="title">PRODUCT LIST</div>
+        <div class="title">Our Products</div>
         <div class="btn-cart-icon">
           <div class="icon-cart">
             <!-- <svg
