--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
+    <link rel="icon" href="add_to_cart_v3-main/image/ArtisansHub Logo (only).svg">
     <link rel="stylesheet" href="./index.css" />
     <link
       rel="stylesheet"
