--- a/add_to_cart_v3-main/index.html
+++ b/add_to_cart_v3-main/index.html
@@ -6,6 +6,9 @@
     <title>Our Products</title>
     <link rel="stylesheet" href="style.css" />
 
+    <!--? FAVICON -->
+    <link rel="icon" href="image/ArtisansHub Logo (only).svg">
+
     <!--? GFONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
