--- a/SignUP-main/index.html
+++ b/SignUP-main/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-
+    <title>SignUp | ArtisansHub</title>
     <link rel="icon" href="../add_to_cart_v3-main/image/ArtisansHub Logo (only).svg">
 
     <link rel="stylesheet" href="./global.css" />
