--- a/index.html
+++ b/index.html
@@ -136,11 +136,12 @@
               </div>
               <div class="frame-parent1">
                 <div class="login-wrapper">
+                  <a href="Final LogIn/index.html"></a>
                   <button class="login">
-                    <a href="Final LogIn/index.html">
+                    
                     <b class="login1">Login</b>
-                  </a>
                   </button>
+                </a>
                 </div>
                 <button class="sign-up">
                   <a href="./SignUP-main/index.html"><b class="sign-up1">SIGN UP</b></a>
