--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               </div>
               <div class="frame-parent1">
                 <div class="login-wrapper">
-                  <a href="Final LogIn/index.html"></a>
+                  <a href="Final LogIn/index.html">
                   <button class="login">
                     
                     <b class="login1">Login</b>
