--- a/index.html
+++ b/index.html
@@ -143,9 +143,11 @@
                   </button>
                 </a>
                 </div>
+                <a href="./SignUP-main/index.html">
                 <button class="sign-up">
-                  <a href="./SignUP-main/index.html"><b class="sign-up1">SIGN UP</b></a>
+                  <b class="sign-up1">SIGN UP</b>
                 </button>
+              </a>
                 <button class="sign-up2" id="signUp1">
                   <img
                     class="storefront-icon"
