--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
               </div>
               <div class="frame-parent1">
                 <div class="login-wrapper">
-                  <a href="Final LogIn/index.html">
+                  <a class="kalbc" href="Final LogIn/index.html">
                   <button class="login">
                     
                     <b class="login1">Login</b>
                   </button>
                 </a>
                 </div>
-                <a href="./SignUP-main/index.html">
+                <a class="kalbc" href="./SignUP-main/index.html">
                 <button class="sign-up">
                   <b class="sign-up1">SIGN UP</b>
                 </button>
