--- a/Final LogIn/index.html
+++ b/Final LogIn/index.html
@@ -80,7 +80,7 @@
               <div class="dont-have-an-account-create-wrapper">
                 <div class="dont-have-an-container">
                   <span class="dont-have-an">Don’t have an account? </span>
-                  <button class="create-account">Create Account</button>
+                  <a href="../SignUP-main/index.html" class="create-account">Create Account</a>
                 </div>
               </div>
             </form>
