--- a/SignUP-main/index.html
+++ b/SignUP-main/index.html
@@ -113,7 +113,7 @@
               <div class="already-have-an-account-log-i-wrapper">
                 <div class="already-have-an-container">
                   <span class="already-have-an">Already Have an account? </span>
-                  <span class="log-in">Log In</span>
+                  <a href="../Final LogIn/index.html">Log In</a>
                 </div>
               </div>
             </form>
