--- a/SignUP-main/index.html
+++ b/SignUP-main/index.html
@@ -100,7 +100,7 @@
                   </div>
                   <div class="google">Google</div>
                 </button>
-                <button class="facebook-btn" id="facebook-login-button">
+                <!-- <button class="facebook-btn" id="facebook-login-button">
                   <img
                     class="facebook-logo-1-streamline-co-icon"
                     alt=""
@@ -108,7 +108,7 @@
                   />
 
                   <div class="facebook">Facebook</div>
-                </button>
+                </button> -->
               </div>
               <div class="already-have-an-account-log-i-wrapper">
                 <div class="already-have-an-container">
