Added login code

--- a/SignUP-main/index.html
+++ b/SignUP-main/index.html
@@ -125,5 +125,6 @@
 
     <script type="module" src="Register.js" defer></script>
     <script type="module" src="googleAuth.js" defer></script>
+    <script type="module" src="login.js" defer></script>
   </body>
 </html>
