--- a/add_to_cart_v3-main/index.html
+++ b/add_to_cart_v3-main/index.html
@@ -86,7 +86,7 @@
       <div class="listCart"></div>
       <div class="btn">
         <button class="close">CLOSE</button>
-        <button class="checkOut">Check Out</button>
+        <a href="../Paypal_Payment/index.html" class="checkOut">Check Out</a>
       </div>
     </div>
 
