--- a/Final LogIn/index.html
+++ b/Final LogIn/index.html
@@ -53,14 +53,14 @@
                 </button>
               </div>
               <div class="username-label">
-                <div class="username">Username</div>
+                <div class="username">Email</div>
                 <div class="input-username">
                   <div class="input-username-child"></div>
                   <input
                     id="username-input"
                     class="enter-username"
                     placeholder="Enter Username"
-                    type="text"
+                    type="email"
                   />
                 </div>
               </div>
