--- a/Final LogIn/index.html
+++ b/Final LogIn/index.html
@@ -69,6 +69,7 @@
                 <div class="input-password">
                   <div class="input-password-child"></div>
                   <input
+                  id="password-input"
                     class="enter-password1"
                     placeholder="Enter Password"
                     type="password"
