add bsdk mc bhen ke lode

--- a/Final LogIn/index.html
+++ b/Final LogIn/index.html
@@ -57,7 +57,7 @@
                 <div class="input-username">
                   <div class="input-username-child"></div>
                   <input
-                    id="username-input"
+                    id="username-input-input"
                     class="enter-username"
                     placeholder="Enter Username"
                     type="email"
@@ -69,7 +69,7 @@
                 <div class="input-password">
                   <div class="input-password-child"></div>
                   <input
-                  id="password-input"
+                  id="password-input-input"
                     class="enter-password1"
                     placeholder="Enter Password"
                     type="password"
