add email option

--- a/SignUP-main/index.html
+++ b/SignUP-main/index.html
@@ -52,7 +52,7 @@
                 </div>
               </div>
               <div class="create-account-btn">
-                <div class="username">Username</div>
+                <div class="username">Email</div>
                 <div class="input-username">
                   <div class="input-username-child"></div>
                   <input
