renaming enter username placeholder

--- a/Final LogIn/index.html
+++ b/Final LogIn/index.html
@@ -59,7 +59,7 @@
                   <input
                     id="username-input-input"
                     class="enter-username"
-                    placeholder="Enter Username"
+                    placeholder="Enter Email"
                     type="email"
                   />
                 </div>
