--- a/index.html
+++ b/index.html
@@ -211,12 +211,14 @@
                           </h2>
                         </div>
                       </div>
+                      <a href="./add_to_cart_v3-main/index.html">
                       <div class="rectangle-parent3">
                         <div class="frame-child3"></div>
                         <button class="shop-now-wrapper">
                           <div class="shop-now">SHOP NOW</div>
                         </button>
                       </div>
+                    </a>
                     </div>
                   </div>
                   <div class="hero-image-parent">
