--- a/index.html
+++ b/index.html
@@ -382,11 +382,13 @@
                   trending products you won't want to miss
                 </h2>
               </div>
+              <a href="./add_to_cart_v3-main/index.html">
               <div class="cta-wrapper">
                 <button class="cta">
                   <b class="see-more">See mORE</b>
                 </button>
               </div>
+            </a>
             </div>
             <div class="artisanshub-container">
               <h1 class="artisanshub1">ArtisansHub</h1>
