--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
               <div class="frame-child"></div>
               <div class="free-shipping-online-payment-o-wrapper">
                 <div class="free-shipping-online">
-                  IF YOU FOUND THIS LOST PENDRIVE, CALL 7020138347 (UJJWAL GUPTA 4YR CSE GCOEN)
-                  <!-- FREE SHIPPING ONLINE PAYMENT ORDER OVER INR 499 IN INDIA -->
+                  FREE SHIPPING ONLINE PAYMENT ORDER OVER INR 499 IN INDIA
                 </div>
               </div>
               <div class="data-splitting">
